force-app/main/default/objects/Contact/fields/Dreampass_AttendeeType__c.field-meta.xml
<CustomField>
    <fullName>Dreampass_AttendeeType__c</fullName>
    <formula>LOWER(Text(Account.Type))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AttendeeType</label>
    <type>Text</type>
</CustomField>