force-app/main/default/objects/Contact/fields/Dreampass_CompanyName__c.field-meta.xml
<CustomField>
    <fullName>Dreampass_CompanyName__c</fullName>
    <formula>Account.Dreampass_CompanyName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Name</label>
    <type>Text</type>
</CustomField>