force-app/main/default/objects/Contact/fields/Dreampass_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>Dreampass_ExternalId__c</fullName>
    <formula>Account.ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Id</label>
    <type>Text</type>
</CustomField>